fix issue with range input on firefox

--- a/src/assets/stylesheets/foundation/_helpers.scss
+++ b/src/assets/stylesheets/foundation/_helpers.scss
@@ -64,3 +64,15 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+// ---------------------------
+// Inbox
+// ---------------------------
+
+input[type=range]::-moz-focus-outer {
+  border: 0;
+}
+
+input[type=range]::-moz-range-track {
+  background-color: $transparent;
+}
